k8s/mcp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-task-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mcp-task-server
  template:
    metadata:
      labels:
        app: mcp-task-server
    spec:
      containers:
      - name: server
        image: mcp:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          requests: # how much a node should have resources to schedule a pod
            cpu: "50m" # 50 milli CPU
#            memory: "1Mi"
            memory: "64Mi"
          limits: # how much resources a node should have to run a pod (upper limits for CPU and OOM killed for memory)
            cpu: "200m"
#            memory: "2Mi"
            memory: "128Mi"
