k8s/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pvc-pod
  namespace: mcp-dev
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'echo hello > /data/test.txt; sleep 3600']
    volumeMounts:
    - name: data
      mountPath: /data
    resources:
      requests: # how much a node should have resources to schedule a pod
        cpu: "50m" # 50 milli CPU
        memory: "1Mi"
      limits: # how much resources a node should have to run a pod (upper limits for CPU and OOM killed for memory)
        cpu: "200m"
        memory: "2Mi"
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: test-pvc
